--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  font-family: "Titillium Web",  "Roboto Condensed", Roboto, sans-serif;
+}
