--- a/src/app/club-gallery/club-gallery.component.css
+++ b/src/app/club-gallery/club-gallery.component.css
@@ -19,5 +19,13 @@
 }
 
 .gallery{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+  grid-gap: 30px;
+  text-align: center;
+}
 
+.gallery .gallery-image{
+  width: 120px;
+  margin: 0 60px;
 }
