I'm really bad at commit messages. I just added some more stuff. Just look at the changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light text-dark bg-transparent">
+<nav class="navbar navbar-expand-lg navbar-dark text-dark bg-transparent">
   <div class="container">
     <a class="navbar-brand" routerLink=""><img src="/assets/brand-logo-1030x1030.png"/></a>
     <button (click)="this.toggleNavBar()" class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
@@ -49,11 +49,14 @@
       <div class="col-md-3">
         <h5 class="text-white-50">Contacts</h5>
         <ul class="nav text-center">
-          <li class="nav-item">
-            <a href="https://facebook.com"><b class="fa fa-facebook"></b></a>
+          <li class="nav-item pr-3">
+            <a href="https://facebook.com"><b class="fa fa-facebook fa-2x"></b></a>
           </li>
-          <li class="nav-item px-2">
-            <a href="https://facebook.com"><b class="fa fa-whatsapp"></b></a>
+          <li class="nav-item px-3">
+            <a href="https://facebook.com"><b class="fa fa-instagram fa-2x"></b></a>
+          </li>
+          <li class="nav-item px-3">
+            <a href="https://facebook.com"><b class="fa fa-whatsapp fa-2x"></b></a>
           </li>
         </ul>
       </div>
