--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,28 @@
-<div class="w-100 text-center">
-  <app-carousel [assets]="this.carouselAssets"></app-carousel>
+<div id="first">
+  <div class="container">
+    <div>
+      <h3 class="text-uppercase">We are</h3>
+      <h2 class="text-uppercase">The Warriors</h2>
+      <hr/>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates
+        asperiores distinctio dolores repudiandae possimus! Soluta dolorum nam
+        eaque debitis incidunt recusandae perferendis quasi fugiat. Nisi labore
+        quod delectus ipsa. Sint quibusdam illo quasi minima tempore. Earum
+        nihil consectetur error nisi illo eius numquam cum quod sit? Quod
+        obcaecati voluptatum laboriosam suscipit amet assumenda iusto, totam
+        aspernatur blanditiis ipsa illo nulla cum, illum, placeat voluptatem
+        voluptas beatae asperiores eum? Iure cupiditate facilis sunt atque
+        consectetur vel. Eos unde placeat repellendus quae delectus similique
+        dolores! Mollitia earum neque voluptatibus magni perspiciatis
+        accusantium, ea quos nesciunt suscipit voluptate eligendi ducimus
+      </p>
+      <a href="#" class="btn btn-outline-primary text-uppercase">Read more...</a>
+    </div>
+    <div id="logo">
+      <img class="logo" src="/assets/brand-logo-1030x1030.png" alt="logo"/>
+    </div>
+  </div>
 </div>
 <app-about-sports [data]="this.aboutSportsData" *ngIf="this.aboutSportsData != null"></app-about-sports>
 <app-trophies [data]="this.trophiesData" *ngIf="this.trophiesData != null"></app-trophies>
