--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
 body{
   font-family: "Titillium Web",  "Roboto Condensed", Roboto, sans-serif;
 }
+
+html{
+  scroll-behavior: smooth;
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
